feat(new-setup): new setup project

--- a/src/styles/_globals.less
+++ b/src/styles/_globals.less
@@ -1,3 +1,5 @@
+@import './antd.less';
+
 html,
 body {
   padding: 0;
@@ -24,3 +26,10 @@ a {
     background: black;
   }
 }
+
+
+// component
+@import './component/_header.less';
+
+// page
+@import './page/_home.less';
